--- a/contact/contact.css
+++ b/contact/contact.css
@@ -4,6 +4,11 @@ body {
     background-color: white;
 }
 
+img{
+    height: 128px;
+    width: 128px;
+}
+
 /*Mobile*/
 @media (min-width: 992px) {
     body {
