--- a/Version 3/css/grayscale.css
+++ b/Version 3/css/grayscale.css
@@ -3,8 +3,8 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: white;
 }
 
 html {
@@ -56,13 +56,14 @@ a:focus, a:hover {
   margin-bottom: 0;
   text-transform: uppercase;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  background-color: black;
+  background-color: white;
 }
 
+/*Navbar Menu Mobile*/
 #mainNav .navbar-toggler {
   font-size: 14px;
   padding: 11px;
-  color: white;
+  color: black;
   border: 1px solid white;
 }
 
@@ -70,8 +71,9 @@ a:focus, a:hover {
   font-weight: 700;
 }
 
+/*Text*/
 #mainNav a {
-  color: white;
+  color: black;
 }
 
 #mainNav .navbar-nav .nav-item {
@@ -106,14 +108,14 @@ a:focus, a:hover {
     padding-top: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    background: black;
+    background: white;
   }
   #mainNav .nav-link.active {
     outline: none;
     background-color: rgba(255, 255, 255, 0.3);
   }
   #mainNav .nav-link.active:hover {
-    color: white;
+    color: #42DCA3;
   }
 }
 
@@ -124,8 +126,8 @@ a:focus, a:hover {
   padding: 200px 0;
   text-align: center;
   color: white;
-  background: url("../img/intro-bg.jpg") no-repeat bottom center scroll;
-  background-color: black;
+  background: url("../assets/img/profile/IMG_6239.CR2.jpg") no-repeat top center scroll;
+  background-color: white;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -255,11 +257,13 @@ ul.banner-social-buttons {
 
 footer {
   padding: 50px 0;
+  background-color: black;
 }
 
 footer p {
   font-size: 14px;
   margin: 0;
+  color: white;
 }
 
 ::-moz-selection {
