--- a/Version 3/css/grayscale.index.css
+++ b/Version 3/css/grayscale.index.css
@@ -355,18 +355,21 @@ body {
     height: 100px;
   }
   .form-style-1 input[type=submit], .form-style-1 input[type=button]{
-    background: #4B99AD;
+    background: #42DCA3;
     padding: 8px 15px 8px 15px;
     border: none;
     color: #fff;
   }
   .form-style-1 input[type=submit]:hover, .form-style-1 input[type=button]:hover{
-    background: #4691A4;
+    background: black;
     box-shadow:none;
     -moz-box-shadow:none;
     -webkit-box-shadow:none;
+    -webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -ms-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
   }
   .form-style-1 .required{
     color:red;
   }
-  
