--- a/Version 3/css/grayscale.index.css
+++ b/Version 3/css/grayscale.index.css
@@ -186,16 +186,6 @@ body {
     padding-bottom: 150px;
   }
   
-  .download-section {
-    color: white;
-    background: url("../img/downloads-bg.jpg") no-repeat center center scroll;
-    background-color: black;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  
   #map {
     width: 100%;
     height: 300px;
@@ -220,19 +210,7 @@ body {
     text-transform: uppercase;
     border-radius: 0;
   }
-  
-  .btn-default {
-    color: #42DCA3;
-    border: 1px solid #42DCA3;
-    background-color: transparent;
-  }
-  
-  .btn-default:focus, .btn-default:hover {
-    color: black;
-    border: 1px solid #42DCA3;
-    outline: none;
-    background-color: #42DCA3;
-  }
+
   
   ul.banner-social-buttons {
     margin-top: 0;
@@ -373,3 +351,7 @@ body {
   .form-style-1 .required{
     color:red;
   }
+
+#card{
+  color: black;
+}
