--- a/Version 4/content/pricing/price.css
+++ b/Version 4/content/pricing/price.css
@@ -1,7 +1,44 @@
+body{
+    background: #E8E8E8;	
+}
 
+#hero-div{
+    background-color: #080808;
+}
+
+#hero-container{
+    width: 100%;
+    height: 12em;
+}
+
+#hero-text{
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: 300;
+    font-size: 48px;
+    color: white;
+    margin-top: 10%;
+}
+
+#price-header{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 200;
+    font-size: 24px;
+}
+
+#price{
+    font-size: 55px;
+    text-align: justify;
+    font-weight: 150;
+}
+
+#text-muted{
+    color: black;
+    font-size: 30px;
+}
 
 footer{
-    background-color: black;    
+    background-color: black;
+    position: relative;  
 }
 
 #copyright{
