--- a/Version 4/css/resume.css
+++ b/Version 4/css/resume.css
@@ -131,7 +131,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #3973ac !important;
+  background-color: #36454f!important;
 }
 
 .text-primary {
@@ -148,4 +148,11 @@ a:hover, a:focus, a:active {
 
 #main_head{
   background-image: url('assets/img/profile/IMG_6239.CR2.jpg');
+}
+
+#askprice{
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200;
+  text-align: center;
+  font-size: 50;
 }
