Gut/Start Modals

--- a/Version 4/public_html/css/main.css
+++ b/Version 4/public_html/css/main.css
@@ -19,7 +19,7 @@ hr.light {
 }
 
 a {
-  color: #F05F40;
+  color: rgb(24, 24, 24);
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
@@ -156,10 +156,10 @@ img::-moz-selection {
     background-color: #fff;
   }
   #mainNav.navbar-shrink .navbar-brand {
-    color: #F05F40;
+    color: rgb(24, 24, 24);
   }
   #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
-    color: #f05f40;
+    color: whitesmoke;
   }
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
@@ -167,7 +167,8 @@ img::-moz-selection {
   }
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-    color: #F05F40;
+    color: whitesmoke;
+    border-radius: 2px;
   }
 }
 
@@ -298,7 +299,7 @@ header.masthead p {
   font-weight: 700;
   text-transform: uppercase;
   border: none;
-  border-radius: 300px;
+  border-radius: 2px;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
@@ -329,4 +330,24 @@ header.masthead p {
 #btn-reverse:hover{
   background: white;
   color: black;
+}
+
+figure {
+  display: flex;
+  flex-flow: column;
+  margin: 0;
+  padding: 5px;
+}
+
+figcaption {
+  width: 100%;
+  text-align: justify;
+  margin-left: 15px;
+}
+
+figure:hover{
+  opacity: 0.3;
+  transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -webkit-transition: .25s ease-in-out;
 }
